# problems

./: README.md
unique and/: .gitignore  CMakeLists.txt  brute_force.cpp  comp.js  makedata.cpp  problem.md  solution.md  std.cpp
unique and pro/: .gitignore  CMakeLists.txt  bf.cpp  comp.js  gen.cpp  problem.md  solution.md  std.cpp
unique and pro/testdata/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in
unique and/testdata/: 1.in  2.in  3.in  4.in  6.in  9.in
